--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,138 @@
-.grid{
+body{
+    background-color: lightgrey;
+}
+
+svg{
+    background-color: white;
+}
+
+#gameOptions{
+    width: 300px
+}
+
+#grid{
     display: flex;
     flex-wrap: wrap;
-    height: 400px;
-    width: 400px;
+    height: 424px;
+    width: 424px;
+}
+
+/* The alert message box */
+.alert {
+    padding: 20px;
+    background-color: #f44336; /* Red */
+    color: white;
+    margin-bottom: 15px;
+  }
+
+#popup{
+    display: none;
+    position: fixed;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
+
+#popup svg{
+    background-color: white;
+    border-radius: 10%;
+    border: solid 2px black;
+}
+
+#notification{
+    text-align: center;
+    text-anchor: middle;
+    dominant-baseline: middle;
+    font-size: 25px;
 }
 
 .cardback{
     font-size: 100px;
+}
+
+.playCard{
+    border: solid 2px black;
+    border-radius: 10%;
+    margin: 1px;
+}
+
+.playCard:hover{
+    box-shadow: 0px 0px 15px red;
+}
+
+.blank{
+    margin: 3px;
+    border-radius: 10%;
+}
+
+#p1{
+    display: none;
+}
+
+#p2{
+    display: none;
+}
+
+#p3{
+    display: none;
+}
+
+#p4{
+    display: none;
+}
+
+.slidecontainer {
+    width: 100%; /* Width of the outside container */
+}
+  
+/* The slider itself */
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%; /* Full-width */
+    height: 10px; /* Specified height */
+    border-radius: 5px;
+    background: grey; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+
+}
+  
+/* Mouse-over effects */
+.slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+}
+  
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    border-radius: 50%;
+    background: black; /* Black background */
+    cursor: pointer; /* Cursor on hover */
+    translate: 0px -7.5px;
+}
+  
+.slider::-moz-range-thumb {
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    border-radius: 50%;
+    background: black; /* Black background */
+    cursor: pointer; /* Cursor on hover */
+}
+
+datalist {
+    display: flex;
+    justify-content: space-between;
+    color: black;
+    width: 100%;
+    margin-left: 1%;
+    margin-top: 4px;
 }
