--- a/styles.css
+++ b/styles.css
@@ -6,24 +6,13 @@ svg{
     background-color: white;
 }
 
-#gameOptions{
-    width: 300px
-}
-
 #grid{
     display: flex;
     flex-wrap: wrap;
     height: 424px;
     width: 424px;
+    margin: auto;
 }
-
-/* The alert message box */
-.alert {
-    padding: 20px;
-    background-color: #f44336; /* Red */
-    color: white;
-    margin-bottom: 15px;
-  }
 
 #popup{
     display: none;
@@ -47,6 +36,22 @@ svg{
     text-anchor: middle;
     dominant-baseline: middle;
     font-size: 25px;
+}
+
+#end{
+    display: none;
+    position: fixed;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
+#endText{
+    font-size: 25px;
+    font-weight: 700;
 }
 
 .cardback{
@@ -84,6 +89,40 @@ svg{
     display: none;
 }
 
+#rulesGrid{
+    display: grid;
+    grid-template-areas: 'left rules right';
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: auto;
+}
+
+#left{
+    grid-area: left;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#gameOptions{
+    grid-area: rules;
+    padding: 3%;
+}
+
+#right{
+    grid-area: right;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.deco {
+    border: solid 2px black;
+    border-radius: 10%;
+    margin: 1px; 
+} 
+
 .slidecontainer {
     width: 100%; /* Width of the outside container */
 }
@@ -100,7 +139,6 @@ svg{
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
     -webkit-transition: .2s; /* 0.2 seconds transition on hover */
     transition: opacity .2s;
-
 }
   
 /* Mouse-over effects */
@@ -134,5 +172,68 @@ datalist {
     color: black;
     width: 100%;
     margin-left: 1%;
-    margin-top: 4px;
+    margin-top: 2%;
+}
+
+label {
+    display: inline-block;
+    margin: 1% 1%;
+    
+}
+
+#generate{
+    margin-top: 5%;
+    height: 30px;
+    font-weight: 700;
+}
+
+#generate:hover{
+    box-shadow: 0px 0px 15px red;
+}
+
+#scores{
+    margin: auto;
+    width: 500px;
+}
+
+#end{
+    display: none;
+    grid-template-areas: 'endleft endmiddle endright';
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: auto;
+}
+
+#endLeft{
+    grid-area: endleft;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#endMiddle{
+    grid-area: endmiddle;
+    padding: 3%;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#endRight{
+    grid-area: endright;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#playAgain{
+    margin-top: 5%;
+    height: 30px;
+    font-weight: 700;
+}
+
+#playAgain:hover{
+    box-shadow: 0px 0px 15px red;
 }
